--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,11 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^7.1",
-	    "guzzlehttp/guzzle": "^6.3 | ^7.0.1",
-	    "ext-json": "*"
+        "php": "^7.2.5|^8.0",
+        "ext-json": "*",
+        "guzzlehttp/promise": "^1.4",
+        "guzzlehttp/psr7": "^1.7",
+        "psr/http-client": "^1.0"
 	},
     "minimum-stability": "dev",
     "prefer-stable": true,
